--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,9 +28,11 @@ Imports:
     tibble
 Suggests:
     covr,
-    spelling
+    spelling,
+    testthat (>= 3.0.0)
 Encoding: UTF-8
 Language: en-GB
 LazyData: true
 RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
+Config/testthat/edition: 3
