--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,4 +35,6 @@ Language: en-GB
 LazyData: true
 RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
+URL: https://github.com/OxfordIHTM/codeditr, http://oxford-ihtm.io/codeditr/
 Config/testthat/edition: 3
+
