--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -55,6 +55,7 @@ reference:
   - title: Calculate
     contents:
     - cod_calculate_age
+    - cod_calculate_ages
 
   - title: Check
     contents:
