--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,6 +25,7 @@ Imports:
     dplyr,
     methods,
     rlang,
+    stringr,
     tibble
 Suggests:
     covr,
@@ -37,4 +38,3 @@ RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
 URL: https://github.com/OxfordIHTM/codeditr, http://oxford-ihtm.io/codeditr/
 Config/testthat/edition: 3
-
