--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,9 @@
 export(cod_calculate_age)
 export(cod_calculate_ages)
 export(cod_check_age)
+export(cod_check_code)
+export(cod_check_code_icd10)
+export(cod_check_code_icd11)
 export(cod_recode_age_type)
 export(cod_recode_sex)
 export(get_age_values)
@@ -12,4 +15,6 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(methods,is)
 importFrom(rlang,.data)
+importFrom(stringr,str_count)
+importFrom(stringr,str_detect)
 importFrom(tibble,tibble)
