--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -61,6 +61,7 @@ reference:
     contents:
     - cod_check_age
     - cod_check_sex
+    - cod_check_code
     - cod_check_missing
 
   - title: Utilities
