--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cod_check_age)
 export(cod_check_code)
 export(cod_check_code_icd10)
 export(cod_check_code_icd11)
+export(cod_check_sex)
 export(cod_recode_age_type)
 export(cod_recode_sex)
 export(get_age_values)
