--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,12 +4,15 @@ export(cod_calculate_age)
 export(cod_calculate_ages)
 export(cod_check_age)
 export(cod_check_code)
-export(cod_check_code_icd10)
-export(cod_check_code_icd11)
+export(cod_check_code_ill_defined_icd10)
+export(cod_check_code_ill_defined_icd11)
+export(cod_check_code_structure_icd10)
+export(cod_check_code_structure_icd11)
 export(cod_check_sex)
 export(cod_recode_age_type)
 export(cod_recode_sex)
 export(get_age_values)
+export(list_ill_defined_icd11)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,mutate)
