create check for unlikely cod

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ export(cod_check_code_ill_defined_icd10)
 export(cod_check_code_ill_defined_icd11)
 export(cod_check_code_structure_icd10)
 export(cod_check_code_structure_icd11)
+export(cod_check_code_unlikely_icd10)
+export(cod_check_code_unlikely_icd11)
 export(cod_check_sex)
 export(cod_recode_age_type)
 export(cod_recode_sex)
