refactor cod_check_by_sex

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(cod_check_age)
 export(cod_check_code)
 export(cod_check_code_ill_defined_icd10)
 export(cod_check_code_ill_defined_icd11)
+export(cod_check_code_sex_icd10)
 export(cod_check_code_sex_icd11)
 export(cod_check_code_structure_icd10)
 export(cod_check_code_structure_icd11)
