--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(cod_check_code_ill_defined_icd10)
 export(cod_check_code_ill_defined_icd11)
 export(cod_check_code_sex_icd10)
 export(cod_check_code_sex_icd11)
+export(cod_check_code_sex_icd11_)
 export(cod_check_code_structure_icd10)
 export(cod_check_code_structure_icd11)
 export(cod_check_code_unlikely_icd10)
