--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,9 +21,12 @@ export(list_ill_defined_icd11)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
 importFrom(dplyr,mutate)
+importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
 importFrom(methods,is)
 importFrom(rlang,.data)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_replace_all)
+importFrom(stringr,str_trim)
 importFrom(tibble,tibble)
