--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -73,6 +73,7 @@ reference:
     contents:
     - icd10_example
     - icd11_example
+    - icd10_unlikely_cod
     - icd11_unlikely_cod
     - icd11_cod_by_sex
 
