--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(cod_check_code_unlikely_icd11)
 export(cod_check_sex)
 export(cod_recode_age_type)
 export(cod_recode_sex)
+export(expand_icd10_code_range)
 export(get_age_values)
 export(list_ill_defined_icd11)
 importFrom(dplyr,bind_rows)
