create list of icd 10 sex-specific codes; fix #64

--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -76,5 +76,6 @@ reference:
     - icd11_example
     - icd10_unlikely_cod
     - icd11_unlikely_cod
+    - icd10_cod_by_sex
     - icd11_cod_by_sex
 
