--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(cod_check_code_unlikely_icd11)
 export(cod_check_sex)
 export(cod_recode_age_type)
 export(cod_recode_sex)
+export(cod_structure_input)
 export(expand_icd10_code_range)
 export(get_age_values)
 export(list_ill_defined_icd11)
