add cod_check_summary function and refactor outputs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(cod_check_code_sex_icd11)
 export(cod_check_code_sex_icd11_)
 export(cod_check_code_structure_icd10)
 export(cod_check_code_structure_icd11)
+export(cod_check_code_summary)
 export(cod_check_code_unlikely_icd10)
 export(cod_check_code_unlikely_icd11)
 export(cod_check_codedit_input)
