add functions to check code and age appropriateness; fix #7

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,10 @@ export(cod_calculate_age)
 export(cod_calculate_ages)
 export(cod_check_age)
 export(cod_check_code)
+export(cod_check_code_age_icd10)
+export(cod_check_code_age_icd10_)
+export(cod_check_code_age_icd11)
+export(cod_check_code_age_icd11_)
 export(cod_check_code_ill_defined_icd10)
 export(cod_check_code_ill_defined_icd11)
 export(cod_check_code_sex_icd10)
