--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,8 @@ Imports:
     tibble
 Suggests:
     covr,
+    knitr,
+    rmarkdown,
     spelling,
     testthat (>= 3.0.0)
 Remotes: 
@@ -41,3 +43,4 @@ RoxygenNote: 7.3.1
 Roxygen: list(markdown = TRUE)
 URL: https://github.com/OxfordIHTM/codeditr, http://oxford-ihtm.io/codeditr/
 Config/testthat/edition: 3
+VignetteBuilder: knitr
