complete documentation of dependency functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,15 +28,28 @@ export(cod_structure_input)
 export(expand_icd10_code_range)
 export(get_age_values)
 export(list_ill_defined_icd11)
+importFrom(dplyr,across)
+importFrom(dplyr,all_of)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
+importFrom(dplyr,contains)
+importFrom(dplyr,distinct)
+importFrom(dplyr,everything)
+importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,rename_with)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(methods,is)
 importFrom(rlang,.data)
 importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
+importFrom(stringr,str_extract)
+importFrom(stringr,str_remove_all)
 importFrom(stringr,str_replace_all)
+importFrom(stringr,str_split)
 importFrom(stringr,str_trim)
 importFrom(tibble,tibble)
